PhoneGap/www/css/index.css
/*
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 * KIND, either express or implied.  See the License for the
 * specific language governing permissions and limitations
 * under the License.
 */
* {
    -webkit-tap-highlight-color: rgba(0,0,0,0); /* make transparent link selection, adjust last value opacity 0 to 1.0 */
}

body {
    -webkit-touch-callout: none;                /* prevent callout to copy image, etc when tap to hold */
    -webkit-text-size-adjust: none;             /* prevent webkit from resizing text to fit */
    -webkit-user-select: none;                  /* prevent copy paste, to allow, change 'none' to 'text' */
    background-color:#E4E4E4;
    background-image:linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
    background-image:-webkit-linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
    background-image:-ms-linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
    background-image:-webkit-gradient(
        linear,
        left top,
        left bottom,
        color-stop(0, #A7A7A7),
        color-stop(0.51, #E4E4E4)
    );
    background-attachment:fixed;
    font-family:'HelveticaNeue-Light', 'HelveticaNeue', Helvetica, Arial, sans-serif;
    font-size:12px;
    height:100%;
    margin:0px;
    padding:0px;
    width:100%;
}

/* Portrait layout (default) */
.app {
    background:url(../img/logo.png) no-repeat center top; /* 170px x 200px */
    position:absolute;             /* position in the center of the screen */
    left:50%;
    top:50%;
    height:50px;                   /* text area height */
    width:225px;                   /* text area width */
    text-align:center;
    padding:180px 0px 0px 0px;     /* image height is 200px (bottom 20px are overlapped with text) */
    margin:-115px 0px 0px -112px;  /* offset vertical: half of image height and text area height */
                                   /* offset horizontal: half of text area width */
}

/* Landscape layout (with min-width) */
@media screen and (min-aspect-ratio: 1/1) and (min-width:400px) {
    .app {
        background-position:left center;
        padding:75px 0px 75px 170px;  /* padding-top + padding-bottom + text area = image height */
        margin:-90px 0px 0px -198px;  /* offset vertical: half of image height */
                                      /* offset horizontal: half of image width and text area width */
    }
}

h1 {
    font-size:24px;
    font-weight:normal;
    margin:0px;
    overflow:visible;
    padding:0px;
    text-align:center;
}

.event {
    border-radius:4px;
    -webkit-border-radius:4px;
    color:#FFFFFF;
    font-size:12px;
    margin:0px 30px;
    padding:2px 0px;
}

.event.listening {
    background-color:#333333;
    display:block;
}

.event.received {
    background-color:#4B946A;
    display:none;
}

@keyframes fade {
    from { opacity: 1.0; }
    50% { opacity: 0.4; }
    to { opacity: 1.0; }
}
 
@-webkit-keyframes fade {
    from { opacity: 1.0; }
    50% { opacity: 0.4; }
    to { opacity: 1.0; }
}
 
.blink {
    animation:fade 3000ms infinite;
    -webkit-animation:fade 3000ms infinite;
}

/*section comment*/

.detailBox {
    width:320px;
    border:1px solid #bbb;
    margin:50px;
}
.titleBox {
    background-color:#fdfdfd;
    padding:10px;
}
.titleBox label{
    color:#444;
    margin:0;
    display:inline-block;
}

.commentBox {
    padding:10px;
    border-top:1px dotted #bbb;
}
.commentBox .form-group:first-child, .actionBox .form-group:first-child {
    width:80%;
}
.commentBox .form-group:nth-child(2), .actionBox .form-group:nth-child(2) {
    width:18%;
}
.actionBox .form-group * {
    width:100%;
}
.taskDescription {
    margin-top:10px 0;
}
.commentList {
    padding:0;
    list-style:none;
    overflow:auto;
}
.commentList li {
    margin:0;
    margin-top:10px;
}

.commenterImage {
    width:30px;
    margin-right:5px;
    height:100%;
    float:left;
}
.commenterImage img {
    width:100%;
    border-radius:50%;
}
.commentText p {
    margin:0;
}
.sub-text {
    color:#aaa;
    font-family:verdana;
    font-size:11px;
}
.actionBox {
    border-top:1px dotted #bbb;
    padding:10px;
}

/*end section comment*/

#divEvents {
    height: 60%;
}

#divWrapperEvent {
    width: 100%;
    height: 90%;
    /*position: fixed;*/
    overflow-y: scroll;
    overflow-wrap: break-word;
    overflow-x: hidden;
}

#ulEvents {
    padding:0;
    list-style:none;
    overflow:auto;
}

#divSlider .slide-group {
    height: 100%;
}

#divSlider .slide-group .slide {
    margin: 0 auto;
    width: 100%;
    height: 100%;
    text-align: center;
}

#divSlider .slide-group .slide img {
    margin: auto;
    min-width: 50%;
    max-height: 100%;

    position: relative;
    top: 50%;
    transform: translateY(-50%);
}

#divSlider .slide-group .slide span {
    color: red;
    position: relative;
    font-weight: bold;
    top: 50%;
    transform: translateY(-50%);
}

#txtComment {
    width: 100%;
    margin: 0 auto;
}

#buttonComment, #buttonCamera {
    margin: 0 auto;
    width: 100%;
    height: 100%;
    font-size: 19px;
}

/*Structure of Detail*/

#divEventInfo {
    height: 10%;
}

#divSlider {
    height: 40%;
    margin: 0 auto;
    vertical-align: middle;
}

#divComments {
    width: 100%;
    height: 35%;
    position: fixed;
    overflow-y: scroll;
    overflow-wrap: break-word;
    overflow-x: hidden;
}

#navComment {
    height: 5%;
}

/* End Structure of Details */

/* Structure of Form Add */
#addStep1, #addStep3 {
    height: 50%;
}

#addStepButton {
    padding-bottom: 15px;
}

.centerHorizontally {
    margin: auto;
    width: 99%;
    padding: 10px;
}

#tableComment {
    width: 100%;
}

#tdCamera {
    width: 24%;
    padding-right: 2px;
}

#tdCommentBox {
    width: 50%;
    padding-left: 2px;
    padding-right: 2px;
}

#tdSendButton {
    padding-left: 2px;
    width: 24%;
}

.commentList li {
    width: 100%;
    padding: 0px;
    margin: 0px;
}

.evenCell {
    padding: 0px 0px 0px 20px;
    background-color: #F6F7F8;
    color: black;
}

.oddCell {
    padding: 0px 0px 0px 10px;
    color: gray;
}

.divNoteNotFound {
    width: 100%;
    text-align: center;
    background-color: black;
    color: white;
}

#addStep1 div {
    width: 99%;
    margin: auto;
}

#addStep1 div div label {
    text-align: left;
    width: auto;
}

#divNoEvents {
    height: 100%;
    text-align: center;
}

#divNoEvents h2 {
    position: relative;
    top: 50%;
    margin: auto;
    color: black;
    transform: translateY(-50%);
}

.selectedListItem {
    background-color: gainsboro;
}

#popover ul li a span {
    position: absolute;
    margin-top: 10px;
}

.row div {
    background-color:lavender;
    border-style: outset;
}

.row div:active {
    position: relative;
    top: 1px;
    background-color: lavenderblush;
}

#map {
    display: none;
    visibility: hidden;
}

